compiler/test-data/parser/errors/arena/missing_scheme.frel
module test

arena UserArena {
    for
}
